--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>✨ Tabela de Punições ✨</title>
+    <title> Tabela de Punições </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="https://media.discordapp.net/attachments/1191749410665795704/1374817920969871420/Cheer1000.png?ex=68355d37&is=68340bb7&hm=be721c71840e75b7481d6ba6f16608ddd96682b32caed262314df68afee3ecf8&=&format=webp&quality=lossless&width=800&height=800" type="image/png">
     <style>
