--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 15/30 min</span></td>
-                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/perma</span></td>
+                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                     <td class="note">Depende da gravidade</td>
                 </tr>
                 <tr class="details-row">
@@ -384,7 +384,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 5 min</span></td>
-                    <td><span class="timeout"><i class="fas fa-clock"></i> 15 min ou <i class="fas fa-ban"></i></span></td>
+                    <td><span class="timeout"><i class="fas fa-clock"></i> 15 min ou <i class="fas fa-ban">Permanente</i></span></td>
                     <td class="note">Mantenha o chat respirável</td>
                 </tr>
                 <tr class="details-row">
@@ -404,7 +404,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
-                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/perma</span></td>
+                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                     <td class="note">Segurança em primeiro lugar</td>
                 </tr>
                 <tr class="details-row">
@@ -424,7 +424,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
-                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/perma</span></td>
+                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                     <td class="note">O streamer joga como quiser!</td>
                 </tr>
                 <tr class="details-row">
@@ -444,7 +444,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
-                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/perma</span></td>
+                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                     <td class="note">O streamer vê como quiser!</td>
                 </tr>
                 <tr class="details-row">
@@ -464,7 +464,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
-                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/perma</span></td>
+                    <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                     <td class="note">Deixe o streamer aprender sozinho!</td>
                 </tr>
                 <tr class="details-row">
