--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 10 min</span></td>
-                    <td><span class="timeout"><i class="fas fa-clock"></i> 1h ou <i class="fas fa-ban"></i></span></td>
+                    <td><span class="timeout"><i class="fas fa-clock"></i> 1h ou <i class="fas fa-ban"> Permanente</i></span></td>
                     <td class="note">Educativo na primeira, severo depois</td>
                 </tr>
                 <tr class="details-row">
@@ -384,7 +384,7 @@
                         </div>
                     </td>
                     <td><span class="timeout"><i class="fas fa-clock"></i> 5 min</span></td>
-                    <td><span class="timeout"><i class="fas fa-clock"></i> 15 min ou <i class="fas fa-ban">Permanente</i></span></td>
+                    <td><span class="timeout"><i class="fas fa-clock"></i> 15 min ou <i class="fas fa-ban"> Permanente</i></span></td>
                     <td class="note">Mantenha o chat respirável</td>
                 </tr>
                 <tr class="details-row">
