--- a/index.html
+++ b/index.html
@@ -579,6 +579,19 @@
                         <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                         <td class="note">Deixe o streamer aprender sozinho!</td>
                     </tr>
+
+                    <!-- Linha 12 -->
+                    <tr class="infraction-row">
+                        <td>
+                            <div class="infraction-cell">
+                                <span class="icon info"><i class="fas fa-chess-knight"></i></span>
+                                <span>Abuso de Audios Resgataveis</span>
+                            </div>
+                        </td>
+                        <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
+                        <td><span class="ban"><i class="fas fa-ban"></i> 24h</span></td>
+                        <td class="note">Detalhes: Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável. A primeira infração serve como alerta, mas abuso contínuo poderá resultar em restrições mais severas ou banimento.!</td>
+                    </tr>
                     <tr class="details-row">
                         <td colspan="4">
                             <div class="details-content">
