--- a/index.html
+++ b/index.html
@@ -584,18 +584,18 @@
                     <tr class="infraction-row">
                         <td>
                             <div class="infraction-cell">
-                                <span class="icon info"><i class="fas fa-chess-knight"></i></span>
-                                <span>Abuso de Audios Resgataveis</span>
+                                <span class="icon warning"><i class="fas fa-volume-mute"></i></span>
+                                <span>Abuso de Áudios Resgatáveis</span>
                             </div>
                         </td>
                         <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
                         <td><span class="ban"><i class="fas fa-ban"></i> 24h</span></td>
-                        <td class="note">Detalhes: Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável. A primeira infração serve como alerta, mas abuso contínuo poderá resultar em restrições mais severas ou banimento.!</td>
+                        <td class="note">Evite uso excessivo de áudios</td>
                     </tr>
                     <tr class="details-row">
                         <td colspan="4">
                             <div class="details-content">
-                                <p><strong>Detalhes:</strong> Dar instruções não solicitadas sobre como jogar, especialmente quando o streamer já pediu para não fazerem isso, arruína a experiência. A primeira infração serve como aviso, mas backseat gaming persistente resultará em banimentos mais longos.</p>
+                                <p><strong>Detalhes:</strong> Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável. A primeira infração serve como alerta, mas abuso contínuo poderá resultar em restrições mais severas ou banimento.</p>
                             </div>
                         </td>
                     </tr>
