--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                         </td>
                     </tr>
                     
-                    <!-- Linha 11 -->
+                    <!-- Linha 11 - Backseat Gaming -->
                     <tr class="infraction-row">
                         <td>
                             <div class="infraction-cell">
@@ -579,12 +579,19 @@
                         <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
                         <td class="note">Deixe o streamer aprender sozinho!</td>
                     </tr>
-
-                    <!-- Linha 12 -->
+                    <tr class="details-row">
+                        <td colspan="4">
+                            <div class="details-content">
+                                <p><strong>Detalhes:</strong> Dar instruções não solicitadas sobre como jogar, especialmente quando o streamer já pediu para não fazerem isso, arruína a experiência. A primeira infração serve como aviso, mas backseat gaming persistente resultará em banimentos mais longos.</p>
+                            </div>
+                        </td>
+                    </tr>
+                    
+                    <!-- Linha 12 - Abuso de Áudios Resgatáveis -->
                     <tr class="infraction-row">
                         <td>
                             <div class="infraction-cell">
-                                <span class="icon warning"><i class="fas fa-volume-mute"></i></span>
+                                <span class="icon warning"><i class="fas fa-volume-up"></i></span>
                                 <span>Abuso de Áudios Resgatáveis</span>
                             </div>
                         </td>
@@ -595,11 +602,10 @@
                     <tr class="details-row">
                         <td colspan="4">
                             <div class="details-content">
-                                <p><strong>Detalhes:</strong> Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável. A primeira infração serve como alerta, mas abuso contínuo poderá resultar em restrições mais severas ou banimento.</p>
+                                <p><strong>Detalhes:</strong> Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável.</p>
                             </div>
                         </td>
                     </tr>
-                </tbody>
             </table>
         </div>
     </div>
