--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                     <tr class="details-row">
                         <td colspan="4">
                             <div class="details-content">
-                                <p><strong>Detalhes:</strong> Usar áudios de forma repetitiva ou em momentos inadequados atrapalha o foco e a experiência do streamer e da comunidade. Áudios constantes, especialmente os que interrompem falas, criam ruído e tornam a live menos agradável.</p>
+                                <p><strong>Detalhes:</strong> Usar áudios de forma repetitiva ou mensagens de audio muito longas atrapalha o foco e a experiência do streamer e da comunidade.</p>
                             </div>
                         </td>
                     </tr>
