--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tabela de Punições</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://media.discordapp.net/attachments/1191749410665795704/1374817920969871420/Cheer1000.png?ex=68355d37&is=68340bb7&hm=be721c71840e75b7481d6ba6f16608ddd96682b32caed262314df68afee3ecf8&=&format=webp&quality=lossless&width=800&height=800" type="image/png">
+    <link rel="icon" href="https://i.postimg.cc/j2Cq79y2/Cheer1000.png" type="image/png">
     <style>
         :root {
             --rosa-claro: #FFF0F5;
