--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                         </td>
                         <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
                         <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
-                        <td class="note">O streamer vê como quiser!</td>
+                        <td class="note">O streamer vê oque quiser!</td>
                     </tr>
                     <tr class="details-row">
                         <td colspan="4">
