--- a/index.html
+++ b/index.html
@@ -606,6 +606,26 @@
                             </div>
                         </td>
                     </tr>
+
+                    <!-- Linha 13 - Troll através de alertas -->
+                    <tr class="infraction-row">
+                        <td>
+                            <div class="infraction-cell">
+                                <span class="icon warning"><i class="fas fa-bell-slash"></i></span>
+                                <span>Troll através de alertas</span>
+                            </div>
+                        </td>
+                        <td><span class="timeout"><i class="fas fa-clock"></i> 30 min</span></td>
+                        <td><span class="ban"><i class="fas fa-ban"></i> 48h</span></td>
+                        <td class="note">Parar/seguir ou doação repetida</td>
+                    </tr>
+                    <tr class="details-row">
+                        <td colspan="4">
+                            <div class="details-content">
+                                <p><strong>Detalhes:</strong> Trollagem através de ações que disparam alertas (como seguir/parar repetidamente ou doações mínimas consecutivas) causa spam de alertas e prejudica o fluxo da live.</p>
+                            </div>
+                        </td>
+                    </tr>
             </table>
         </div>
     </div>
