--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         </td>
                         <td><span class="timeout"><i class="fas fa-clock"></i> 30 min</span></td>
                         <td><span class="ban"><i class="fas fa-ban"></i> 48h</span></td>
-                        <td class="note">Parar/seguir ou doação repetida</td>
+                        <td class="note">Não Trollar</td>
                     </tr>
                     <tr class="details-row">
                         <td colspan="4">
