--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                             </div>
                         </td>
                         <td><span class="timeout"><i class="fas fa-clock"></i> 15 min</span></td>
-                        <td><span class="ban"><i class="fas fa-ban"></i> 24h/Permanente</span></td>
+                        <td><span class="ban"><i class="fas fa-skull-crossbones"></i> Imediato</span></td>
                         <td class="note">Segurança em primeiro lugar</td>
                     </tr>
                     <tr class="details-row">
